--- a/Source/Enter.UI/wwwroot/styles/Enter.Ui.scss
+++ b/Source/Enter.UI/wwwroot/styles/Enter.Ui.scss
@@ -1,6 +1,6 @@
 @import "themes/basic.theme";
 @import "themes/dark.theme";
-
+@import url('../libs/remix/remixicon.css');
 @import "normalize";
 @import "_variables.scss";
 @import "_mixins.scss";
