--- a/Source/Enter.UI/wwwroot/styles/themes/basic.theme.scss
+++ b/Source/Enter.UI/wwwroot/styles/themes/basic.theme.scss
@@ -2,17 +2,19 @@
   
   //Base
   --ent-primary: #405189;
-  --ent-secondary: #3577f1;
+  --ent-secondary: #f1f1f2;
+  --ent-tertiary: #f9f9f9;
   --ent-success: #0ab39c;
   --ent-info: #299cdb;
   --ent-warning: #f7b84b;
   --ent-danger: #f06548;
-  --ent-light: #f3f6f9;
+  --ent-light: #eeeeee;
   --ent-dark: #212529;
   --ent-link: #3577f1;
 
   --ent-primary-text: #364574;
-  --ent-secondary-text: #2d65cd;
+  --ent-secondary-text: #eee;
+  --ent-tertiary-text: #f1f1f1;
   --ent-success-text: #099885;
   --ent-info-text: #2385ba;
   --ent-warning-text: #d29c40;
@@ -20,7 +22,8 @@
   --ent-light-text: #ced4da;
   --ent-dark-text: #343a40;
   --ent-primary-bg-subtle: #e2e5ed;
-  --ent-secondary-bg-subtle: #e1ebfd;
+  --ent-secondary-bg-subtle: #eee;
+  --ent-tertiary-bg-subtle: #f1f1f1;
   --ent-success-bg-subtle: #daf4f0;
   --ent-info-bg-subtle: #dff0fa;
   --ent-warning-bg-subtle: #fef4e4;
