--- a/Source/Enter.UI/Components/Buttons/EntButton.razor
+++ b/Source/Enter.UI/Components/Buttons/EntButton.razor
@@ -28,33 +28,36 @@
         .AddClass("ent-btn-lg",Size == ButtonSize.Large)
         .AddClass("ent-btn-sm", Size == ButtonSize.Small)
         
-        .AddClass("ent-btn-primary",Type==ButtonType.Solid && Color == ButtonColor.Primary)
-        .AddClass("ent-btn-secondary",Type==ButtonType.Solid && Color == ButtonColor.Secondary)
-        .AddClass("ent-btn-light",Type==ButtonType.Solid && Color == ButtonColor.Light)
-        .AddClass("ent-btn-dark",Type==ButtonType.Solid && Color == ButtonColor.Dark)
-        .AddClass("ent-btn-success",Type==ButtonType.Solid && Color == ButtonColor.Success)
-        .AddClass("ent-btn-danger",Type==ButtonType.Solid && Color == ButtonColor.Danger)
-        .AddClass("ent-btn-warning",Type==ButtonType.Solid && Color == ButtonColor.Warning)
-        .AddClass("ent-btn-info",Type==ButtonType.Solid && Color == ButtonColor.Info)
+        .AddClass("ent-btn-primary",Mode==ButtonMode.Solid && Color == ButtonColor.Primary)
+        .AddClass("ent-btn-secondary",Mode==ButtonMode.Solid && Color == ButtonColor.Secondary)
+        .AddClass("ent-btn-tertiary",Mode==ButtonMode.Solid && Color == ButtonColor.Tertiary)
+        .AddClass("ent-btn-light",Mode==ButtonMode.Solid && Color == ButtonColor.Light)
+        .AddClass("ent-btn-dark",Mode==ButtonMode.Solid && Color == ButtonColor.Dark)
+        .AddClass("ent-btn-success",Mode==ButtonMode.Solid && Color == ButtonColor.Success)
+        .AddClass("ent-btn-danger",Mode==ButtonMode.Solid && Color == ButtonColor.Danger)
+        .AddClass("ent-btn-warning",Mode==ButtonMode.Solid && Color == ButtonColor.Warning)
+        .AddClass("ent-btn-info",Mode==ButtonMode.Solid && Color == ButtonColor.Info)
         
-        .AddClass("ent-btn-outline-primary",Type==ButtonType.Outline && Color == ButtonColor.Primary)
-        .AddClass("ent-btn-outline-secondary",Type==ButtonType.Outline && Color == ButtonColor.Secondary)
-        .AddClass("ent-btn-outline-light",Type==ButtonType.Outline && Color == ButtonColor.Light)
-        .AddClass("ent-btn-outline-dark",Type==ButtonType.Outline && Color == ButtonColor.Dark)
-        .AddClass("ent-btn-outline-success",Type==ButtonType.Outline && Color == ButtonColor.Success)
-        .AddClass("ent-btn-outline-danger",Type==ButtonType.Outline && Color == ButtonColor.Danger)
-        .AddClass("ent-btn-outline-warning",Type==ButtonType.Outline && Color == ButtonColor.Warning)
-        .AddClass("ent-btn-outline-info",Type==ButtonType.Outline && Color == ButtonColor.Info)
+        .AddClass("ent-btn-outline-primary",Mode==ButtonMode.Outline && Color == ButtonColor.Primary)
+        .AddClass("ent-btn-outline-secondary",Mode==ButtonMode.Outline && Color == ButtonColor.Secondary)
+        .AddClass("ent-btn-outline-tertiary",Mode==ButtonMode.Outline && Color == ButtonColor.Tertiary)
+        .AddClass("ent-btn-outline-light",Mode==ButtonMode.Outline && Color == ButtonColor.Light)
+        .AddClass("ent-btn-outline-dark",Mode==ButtonMode.Outline && Color == ButtonColor.Dark)
+        .AddClass("ent-btn-outline-success",Mode==ButtonMode.Outline && Color == ButtonColor.Success)
+        .AddClass("ent-btn-outline-danger",Mode==ButtonMode.Outline && Color == ButtonColor.Danger)
+        .AddClass("ent-btn-outline-warning",Mode==ButtonMode.Outline && Color == ButtonColor.Warning)
+        .AddClass("ent-btn-outline-info",Mode==ButtonMode.Outline && Color == ButtonColor.Info)
         
         
-        .AddClass("ent-btn-soft-primary",Type==ButtonType.Soft && Color == ButtonColor.Primary)
-        .AddClass("ent-btn-soft-secondary",Type==ButtonType.Soft && Color == ButtonColor.Secondary)
-        .AddClass("ent-btn-soft-light",Type==ButtonType.Soft && Color == ButtonColor.Light)
-        .AddClass("ent-btn-soft-dark",Type==ButtonType.Soft && Color == ButtonColor.Dark)
-        .AddClass("ent-btn-soft-success",Type==ButtonType.Soft && Color == ButtonColor.Success)
-        .AddClass("ent-btn-soft-danger",Type==ButtonType.Soft && Color == ButtonColor.Danger)
-        .AddClass("ent-btn-soft-warning",Type==ButtonType.Soft && Color == ButtonColor.Warning)
-        .AddClass("ent-btn-soft-info",Type==ButtonType.Soft && Color == ButtonColor.Info)
+        .AddClass("ent-btn-soft-primary",Mode==ButtonMode.Soft && Color == ButtonColor.Primary)
+        .AddClass("ent-btn-soft-secondary",Mode==ButtonMode.Soft && Color == ButtonColor.Secondary)
+        .AddClass("ent-btn-soft-tertiary",Mode==ButtonMode.Soft && Color == ButtonColor.Tertiary)
+        .AddClass("ent-btn-soft-light",Mode==ButtonMode.Soft && Color == ButtonColor.Light)
+        .AddClass("ent-btn-soft-dark",Mode==ButtonMode.Soft && Color == ButtonColor.Dark)
+        .AddClass("ent-btn-soft-success",Mode==ButtonMode.Soft && Color == ButtonColor.Success)
+        .AddClass("ent-btn-soft-danger",Mode==ButtonMode.Soft && Color == ButtonColor.Danger)
+        .AddClass("ent-btn-soft-warning",Mode==ButtonMode.Soft && Color == ButtonColor.Warning)
+        .AddClass("ent-btn-soft-info",Mode==ButtonMode.Soft && Color == ButtonColor.Info)
         
         
         .Build();
@@ -68,23 +71,17 @@
 
     [Parameter]
     public ButtonColor Color { get; set; } = ButtonColor.Primary;
+    
     [Parameter]
-    public ButtonType Type { get; set; } = ButtonType.Solid;
+    public ButtonMode Mode { get; set; } = ButtonMode.Solid;
+    
     [Parameter]
     public object? Icon { get; set; }
 
     [Parameter]
     public bool Loading { get; set; } = false;
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-        {
-            var attr = AdditionalAttributes;
-        }
-        base.OnAfterRender(firstRender);
-    }
-
+  
     public override void Dispose()
     {
     }
