--- a/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
@@ -6,10 +6,10 @@
 @using Enter.UI.Abstractions.Components.Inputs
 @using Enter.UI.Core
 <EntToolbar>
-    <EntToolbarButton Text="Add New" Icon="EntIconName.Add" Loading="true"/>
-    <EntToolbarButton Text="Delete Selected" Icon="EntIconName.Delete"/>
-    <EntToolbarButton Icon="EntIconName.User"/>
-    <EntToolbarButton Text="Details"/>
+    <EntButton Size="ButtonSize.Small" Color="ButtonColor.Dark" Mode="ButtonMode.Solid" Icon="EntIconName.User" Loading="true" >Users</EntButton>
+    <EntButton Size="ButtonSize.Small" Color="ButtonColor.Light" Mode="ButtonMode.Solid" Icon="EntIconName.Note" >Document</EntButton>
+    <EntButton Size="ButtonSize.Small" Color="ButtonColor.Light" Mode="ButtonMode.Solid" Icon="EntIconName.Note" >Document</EntButton>
+    <EntButton Size="ButtonSize.Small" Color="ButtonColor.Success" Mode="ButtonMode.Solid" Icon="EntIconName.Upload" ></EntButton>
 </EntToolbar>
 <EntCard Expandable="true" class="m-4" Title="Form Layout">
     <CardBody>
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="tablet:col-1/3">
-                    <EntButton IsOutline="true" Color="ButtonColor.Primary" type="submit">ارسال</EntButton>
+                    <EntButton IsOutline="true" Color="ButtonColor.Primary" Mode="ButtonMode.Solid" type="submit">ارسال</EntButton>
                 </div>
             </div>
         </EditForm>
